fixed the overflow space at the bottom of the page

--- a/client/stylesheets/modules/playerPage/chat.scss
+++ b/client/stylesheets/modules/playerPage/chat.scss
@@ -1,6 +1,4 @@
 .chat {
-    @include outer-container;
-    @include pad;
     display: none;
 }
 
